--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: r
+language: R
+cache: packages
 
 r:
-- 4.0
+- 4.1
 - 3.6
 - 3.5
 - 3.4
