--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,20 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
 language: R
+sudo: false
 cache: packages
 
 r:
-- 4.0
+- bioc-release
 - 3.6
 - 3.5
 - 3.4
+- 3.3
 
-git:
-  depth: 1
-
-#branches:
-#  only:
-#    - master
-
-r_packages:
-- ggplot2
-- rmarkdown
-- markdown
-- optparse
-- scales
-- plotly
-- igraph
-- ggrepel
-- devtools
-- covr
-- pbapply
-- Deriv
-- graphics
-- stats
-- grDevices
-- parallel
-- methods
-- gridExtra
-
-install:
-- Rscript -e 'install.packages("devtools",repos = "http://cran.wustl.edu")'
-- R -e 'devtools::install_deps(dep = T)'
-
-script:
-- R -e 'devtools::document()'
-- R CMD build .
-- R CMD check *tar.gz --as-cran
+after_success:
+- tar -C .. -xvf *tar.gz
+- Rscript -e 'covr::package_coverage(quiet = FALSE)'
+- Rscript -e 'covr::codecov()'
 
 after_script:
 - Rscript inst/launcher.R -h
 - Rscript inst/launcher.R -d inst/extdata/agriculture.tsv
 - ls -larth
-
-after_success:
-- tar -C .. -xf $PKG_TARBALL
-- Rscript -e 'covr::codecov()'
