--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,10 @@
 .Rhistory
 .RData
 .Ruserdata
-ave.pdf
-corcircle.pdf
-design.pdf
-individuals.pdf
-individuals.tsv
-rgcca_result.RData
-rgcca_ui.Rproj
-top_variables.pdf
-variables.tsv
+*.pdf
+*.tsv
+*.txt
+*.RData
+*.Rproj
 .idea/
-rgccaUI.Rproj
+inst/doc
