Initialise with golem

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,8 @@ Imports:
     shiny,
     shinyjs,
     DT,
-    optparse
+    optparse,
+    config (>= 0.3.1),
+    golem (>= 0.3.1)
 biocViews: Visualization, PrincipalComponent, DimensionReduction, StructuralEquationModels
 VignetteBuilder: knitr
