--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -33,5 +33,5 @@ jobs:
       - name: Test CLI
         run: |
           Rscript inst/launcher.R -h
-          Rscript inst/launcher.R -d inst/extdata/agriculturetsv
+          Rscript inst/launcher.R -d inst/extdata/agriculture.tsv
           ls -larth
