--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,6 +30,12 @@ jobs:
           name: ${{ runner.os }}-r${{ matrix.config.r }}-results
           path: check
 
+      - name: Install dependencies
+        run : |
+          install.packages(c("pbapply", "gridExtra", "ggrepel", "igraph"))
+          remotes::install_deps(dependencies = TRUE)
+        shell: Rscript {0}
+
       - name: Test CLI
         run: |
           Rscript inst/launcher.R -h
