--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,6 +21,12 @@ jobs:
         with:
           extra-packages: rcmdcheck
 
+      - name: Install additional dependencies
+        run : |
+          install.packages(c("pbapply", "gridExtra", "ggrepel", "igraph"))
+          remotes::install_deps(dependencies = TRUE)
+        shell: Rscript {0}
+
       - uses: r-lib/actions/check-r-package@v1
 
       - name: Upload check results
@@ -30,14 +36,8 @@ jobs:
           name: ${{ runner.os }}-r${{ matrix.config.r }}-results
           path: check
 
-      - name: Install dependencies
-        run : |
-          install.packages(c("pbapply", "gridExtra", "ggrepel", "igraph"))
-          remotes::install_deps(dependencies = TRUE)
-        shell: Rscript {0}
-
       - name: Test CLI
         run: |
           Rscript inst/launcher.R -h
-          Rscript inst/launcher.R -d inst/extdata/agriculture.tsv
-          ls -larth
+          # Rscript inst/launcher.R -d inst/extdata/agriculture.tsv
+          # ls -larth
