--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Install additional dependencies
         run : |
-          R - e 'install.packages(c("pbapply", "gridExtra", "ggrepel", "igraph"))'
-          R -e 'remotes::install_deps(dependencies = TRUE)'
+          R - e "install.packages(c('pbapply', 'gridExtra', 'ggrepel', 'igraph'))"
+          R -e "remotes::install_deps(dependencies = TRUE)"
 
       - uses: r-lib/actions/check-r-package@v1
 
