--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,10 +21,10 @@ jobs:
         with:
           extra-packages: rcmdcheck
 
-      - name: Install additional dependencies
-        run : |
-          R -e "install.packages(c('pbapply', 'gridExtra', 'ggrepel', 'igraph'))"
-          R -e "remotes::install_deps(dependencies = TRUE)"
+#      - name: Install additional dependencies
+#        run : |
+#          R -e "install.packages(c('pbapply', 'gridExtra', 'ggrepel', 'igraph'))"
+#          R -e "remotes::install_deps(dependencies = TRUE)"
 
       - uses: r-lib/actions/check-r-package@v1
 
