--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,9 +21,9 @@ jobs:
         with:
           extra-packages: rcmdcheck
 
-#      - name: Install additional dependencies
-#        run : |
-#          R -e "install.packages(c('pbapply', 'gridExtra', 'ggrepel', 'igraph'))"
+      - name: Install additional dependencies
+        run : |
+          R -e "install.packages(c('pbapply', 'gridExtra', 'ggrepel', 'igraph'))"
 #          R -e "remotes::install_deps(dependencies = TRUE)"
 
       - uses: r-lib/actions/check-r-package@v1
@@ -39,5 +39,5 @@ jobs:
         run: |
           Rscript inst/launcher.R -h
           Rscript inst/launcher.R -d inst/extdata/agriculture.tsv
-          Rscript -e "covr::codecov()"
+#          Rscript -e "covr::codecov()"
           ls -larth
